CS2 ISB - Labo's/Opgeloste Labo's/iis-site-windows.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iis
  template:
    metadata:
      labels:
        app: iis
    spec:
      nodeSelector:
        "kubernetes.io/os": windows
      imagePullSecrets:
      - name: regcred
      containers:
      - name: iis
        image: youneseakdg/iis-site-windows:v1.0
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: iis-service
spec:
  selector:
    app: iis
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
  type: LoadBalancer
