CS2 ISB - Labo's/Opgeloste Labo's/iis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: iis-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: iis-service
                port:
                  number: 80
